Ignore non-text mimetypes

Krdp has to copy the mimetype data before announcing it has a clipboard
to avoid some issues. This is potentially expensive.

We only send text at an RDP level currently, so instead only handle text
mimetypes.

BUG: 520175